--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -242,7 +242,7 @@
     }
 
     &:nth-child(2) {
-      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 210% 0%;
+      background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 210% 0;
       margin: 0;
     }
 
@@ -255,13 +255,13 @@
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     .advantages__item {
       &:nth-child(1) {
-        background-image: url("../img/iphone-screen-1-desktop@2x.png") no-repeat 175% 0;
+        background: url("../img/iphone-screen-1-desktop@2x.png") no-repeat 175% 0;
         background-size: 292px 302px;
         margin: 0;
       }
 
       &:nth-child(2) {
-        background: url("../img/iphone-screen-2-desktop@2x.png") no-repeat 210% 0%;
+        background: url("../img/iphone-screen-2-desktop@2x.png") no-repeat 210% 0;
         background-size: 292px 302px;
         margin: 0;
       }
