--- a/source/less/blocks/userform.less
+++ b/source/less/blocks/userform.less
@@ -1,314 +1,3 @@
-.userform__list {
-  .inner(280px; 0);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.userform__list-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  .fonts(400; 14px; 30px);
-  text-transform: uppercase;
-  color: @col-red;
-  margin-top: -25px;
-  padding-bottom: 31px;
-}
-
-.userform__list-item-text {
-  padding: 11px 0 7px 24px;
-}
-
-.userform__list-input {
-  width: 258px;
-  .fonts(400; 18px; 30px);
-  color: @bg-darkgrey;
-  text-align: left;
-  padding: 14px 0 14px 20px;
-  border: 2px solid @bg-lightgrey;
-  outline: none;
-
-  &:hover,
-  &:focus {
-    border-color: @col-black;
-  }
-
-  &:active {
-    border-color: @col-red;
-  }
-}
-
-.userform__list-checkbox {
-  background-color: @bg-lightgrey;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 13px;
-}
-
-.userform__area-checkbox {
-  .inner(280px; 20px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  border: none;
-  padding: 20px 0;
-}
-
-.userform__title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  .inner(280px; 20px);
-}
-
-.userform__checkbox-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 220px;
-  .fonts(400; 14px; 18px);
-  color: @col-red;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 36px 0 0 0;
-}
-
-.userform__checkbox-name {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  .fonts(400; 18px; 30px);
-  color: @bg-darkgrey;
-  padding: 25px 0 27px 0;
-  margin-left: 70px;
-}
-
-.userform__checkbox {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  width: 0;
-  height: 0;
-
-  &::before {
-    position: absolute;
-    content: "";
-    width: 35px;
-    height: 35px;
-    background-color: @bg-white;
-    border: 1px solid #e5e5e5;
-    top: -18px;
-    left: -280px;
-    cursor: pointer;
-  }
-
-  &:hover::before,
-  &:focus::before {
-    border-color: @col-black;
-  }
-
-  &:active::before {
-    border-color: @col-red;
-  }
-
-  &:checked {
-    &::after {
-      position: absolute;
-      content: "";
-      width: 30px;
-      height: 21px;
-      top: -10px;
-      left: -274px;
-      background: url("../img/icon-yes-red.svg") no-repeat 0 0;
-    }
-  }
-}
-
-.userform__list-contact {
-  background-color: @bg-white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 48px 0 10px;
-}
-
-.userform__area-contact {
-  .inner(280px; 20px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border: none;
-}
-
-.userform__contact-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  .fonts(400; 14px; 30px);
-  text-transform: uppercase;
-  color: @col-red;
-  margin-top: -25px;
-  padding-bottom: 31px;
-}
-
-.userform__contact-text {
-  padding: 11px 0 7px 24px;
-}
-
-.userform__contact-input {
-  width: 258px;
-  .fonts(400; 18px; 30px);
-  color: @bg-darkgrey;
-  text-align: left;
-  padding: 14px 0 14px 20px;
-  border: 2px solid @bg-lightgrey;
-  outline: none;
-
-  &:hover,
-  &:focus {
-    border-color: @col-black;
-  }
-
-  &:active {
-    border-color: @col-red;
-  }
-}
-
-.userform__contact-title {
-  display: none;
-}
-
-.userform__list-radio {
-  background-color: @bg-lightgrey;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 40px;
-}
-
-.userform__area-radio {
-  .inner(280px; 20px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  border: none;
-}
-
-.userform__radio-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 220px;
-  .fonts(400; 14px; 18px);
-  color: @col-red;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 38px 0 0 30px;
-}
-
-.userform__radio-name {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  .fonts(400; 18px; 30px);
-  color: @bg-darkgrey;
-  padding: 40px 0 6px 40px;
-  margin-left: 30px;
-}
-
-.userform__radio {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  width: 0;
-  height: 0;
-
-  &::before {
-    position: absolute;
-    content: "";
-    width: 33px;
-    height: 35px;
-    background-color: @bg-white;
-    border: 1px solid #e5e5e5;
-    border-radius: 50%;
-    top: -2px;
-    left: -278px;
-    cursor: pointer;
-  }
-
-  &:hover::before,
-  &:focus::before {
-    border-color: @col-black;
-  }
-
-  &:active::before {
-    border-color: @col-red;
-  }
-
-
-  &:checked {
-    &::after {
-      position: absolute;
-      content: "";
-      width: 13px;
-      height: 13px;
-      border: 1px solid @col-red;
-      border-radius: 50%;
-      background-color: @col-red;
-      top: 9px;
-      left: -268px;
-    }
-  }
-}
-
-.userform__list-textarea {
-  background-color: @bg-white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.userform__area-text {
-  .inner(280px; 20px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border: none;
-}
-
-.userform__text-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 220px;
-  .fonts(400; 14px; 18px);
-  color: @col-red;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 38px 0 15px 30px;
-}
-
-.userform__textarea {
-  .fonts(400; 18px; 30px);
-  width: 261px;
-  color: @bg-darkgrey;
-  background-color: transparent;
-  border: 2px solid #e5e5e5;
-  padding: 15px 0 127px 17px;
-}
-
 .userform__submit-list {
   .inner(280px; 20px);
   display: flex;
@@ -349,6 +38,10 @@
   color: @bg-darkgrey;
   text-transform: uppercase;
   margin-top: 9px;
+
+  &--isdesktop {
+    display: none;
+  }
 }
 
 .userform__star {
@@ -359,241 +52,6 @@
   .userform {
     display: flex;
     flex-direction: column;
-  }
-
-  .userform__list {
-    align-items: flex-start;
-    .inner(620px; 0);
-    order: 1;
-  }
-
-  .userform__list-item {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    color: @col-red;
-    margin-top: -22px;
-    padding-bottom: 76px;
-  }
-
-  .userform__list-item-text {
-    padding: 11px 0 20px 0;
-  }
-
-  .userform__list-input {
-    width: 504px;
-    margin-top: -7px;
-    margin-left: 16px;
-    padding: 10px 0 14px 22px;
-
-    &--name {
-      width: 542px;
-    }
-  }
-
-  .userform__list-checkbox {
-    background-color: @bg-white;
-    order: 4;
-  }
-
-  .userform__area-checkbox {
-    .inner(620px; 20px);
-    border: 2px solid @bg-lightgrey;
-    margin-top: 20px;
-    padding: 28px 0;
-  }
-
-  .userform__title {
-    .inner(435px; 0);
-  }
-
-  .userform__checkbox-title {
-    width: 380px;
-    padding: 0;
-  }
-
-  .userform__checkbox-name {
-    margin-left: 120px;
-  }
-
-  .userform__checkbox {
-    &::before {
-      top: -18px;
-      left: -560px;
-    }
-
-    &:checked {
-      &::after {
-        top: -12px;
-        left: -554px;
-      }
-    }
-  }
-
-  .userform__list-contact {
-    padding: 20px 0 0;
-    order: 3;
-  }
-
-  .userform__area-contact {
-    .inner(620px; 20px);
-    border: 2px solid @bg-lightgrey;
-    padding: 20px 0 0;
-  }
-
-  .userform__contact-title {
-    .fonts(400; 14px; 18px);
-    color: @col-red;
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 255px;
-    text-align: center;
-  }
-
-  .userform__contact-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 25px 20px 10px 60px;
-  }
-
-  .userform__contact-text {
-    position: relative;
-    .fonts(400; 14px; 30px);
-    text-transform: uppercase;
-    color: @col-red;
-    padding-left: 19px;
-    order: 2;
-
-    &::before {
-      position: absolute;
-      content: "";
-      width: 63px;
-      height: 63px;
-      top: -72px;
-      left: 435px;
-      background-color: @bg-lightgrey;
-    }
-
-    &--phone {
-      position: relative;
-      margin-top: -3px;
-
-      &::after {
-        position: absolute;
-        content: "";
-        width: 20px;
-        height: 20px;
-        top: -49px;
-        left: 458px;
-        background: url("../img/icon-phone.svg") no-repeat 0 0;
-      }
-    }
-
-    &--mail {
-      position: relative;
-      margin-top: -5px;
-
-      &::after {
-        position: absolute;
-        content: "";
-        width: 20px;
-        height: 20px;
-        top: -48px;
-        left: 458px;
-        background: url("../img/icon-mail.svg") no-repeat 0 0;
-      }
-    }
-  }
-
-  .userform__contact-input {
-    width: 415px;
-    .fonts(400; 18px; 30px);
-    color: @bg-darkgrey;
-    padding: 14px 0 14px 19px;
-    margin-bottom: 10px;
-    border: 2px solid @bg-lightgrey;
-    cursor: pointer;
-    outline: none;
-    order: 1;
-  }
-
-  .userform__list-radio {
-    background-color: @bg-white;
-    padding-bottom: 40px;
-    margin-top: 10px;
-    order: 2;
-  }
-
-  .userform__area-radio {
-    .inner(620px; 0);
-    border: 2px solid @bg-lightgrey;
-    padding-bottom: 60px;
-  }
-
-  .userform__title-radio {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 350px;
-  }
-
-  .userform__radio-title {
-    width: 320px;
-    padding: 0;
-  }
-
-  .userform__radio-name {
-    padding: 36px 0 0 90px;
-    margin-left: 30px;
-    margin-top: 10px;
-  }
-
-  .userform__radio {
-    &::before {
-      top: -2px;
-      left: -558px;
-    }
-
-    &:checked {
-      &::after {
-        top: 9px;
-        left: -548px;
-      }
-    }
-  }
-
-  .userform__list-textarea {
-    margin-top: 35px;
-    order: 6;
-  }
-
-  .userform__area-text {
-    .inner(620px; 0);
-    border: 2px solid @bg-lightgrey;
-    padding: 21px 0 48px;
-  }
-
-  .userform__title-textarea {
-    width: 265px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .userform__text-title {
-    padding: 18px 0 15px 0;
-  }
-
-  .userform__textarea {
-    .inner(480px; 0);
-    border: 2px solid #e5e5e5;
-    padding: 18px 0 116px 18px;
   }
 
   .userform__submit-list {
@@ -624,266 +82,40 @@
   .userform {
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
-  .userform__list {
-    align-items: flex-start;
-    .inner(620px; 0);
-    order: 1;
-  }
-
-  .userform__list-item {
-    display: flex;
-    flex-direction: row;
     justify-content: flex-start;
-    color: @col-red;
-    margin-top: -22px;
-    padding-bottom: 76px;
-  }
-
-  .userform__list-item-text {
-    padding: 11px 0 20px 0;
-  }
-
-  .userform__list-input {
-    width: 504px;
-    margin-top: -7px;
-    margin-left: 16px;
-    padding: 10px 0 14px 22px;
-
-    &--name {
-      width: 542px;
-    }
-  }
-
-  .userform__list-checkbox {
-    background-color: @bg-white;
-    order: 4;
-  }
-
-  .userform__area-checkbox {
-    .inner(620px; 20px);
-    border: 2px solid @bg-lightgrey;
-    margin-top: 20px;
-    padding: 28px 0;
-  }
-
-  .userform__title {
-    .inner(435px; 0);
-  }
-
-  .userform__checkbox-title {
-    width: 380px;
-    padding: 0;
-  }
-
-  .userform__checkbox-name {
-    margin-left: 120px;
-  }
-
-  .userform__checkbox {
-    &::before {
-      top: -18px;
-      left: -560px;
-    }
-
-    &:checked {
-      &::after {
-        top: -12px;
-        left: -554px;
-      }
-    }
-  }
-
-  .userform__list-contact {
-    padding: 16px 0 20px;
-    order: 3;
-  }
-
-  .userform__area-contact {
-    .inner(620px; 20px);
-    border: 2px solid @bg-lightgrey;
-    padding: 24px 0 10px;
-  }
-
-  .userform__contact-title {
-    .fonts(400; 14px; 18px);
-    color: @col-red;
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 255px;
-    text-align: center;
-  }
-
-  .userform__contact-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px 20px 20px 60px;
-  }
-
-  .userform__contact-text {
-    position: relative;
-    .fonts(400; 14px; 30px);
-    text-transform: uppercase;
-    color: @col-red;
-    padding-left: 19px;
-    order: 2;
-
-    &::before {
-      position: absolute;
-      content: "";
-      width: 63px;
-      height: 63px;
-      top: -72px;
-      left: 435px;
-      background-color: @bg-lightgrey;
-    }
-
-    &--phone {
-      position: relative;
-
-      &::after {
-        position: absolute;
-        content: "";
-        width: 20px;
-        height: 20px;
-        top: -49px;
-        left: 458px;
-        background: url("../img/icon-phone.svg") no-repeat 0 0;
-      }
-    }
-
-    &--mail {
-      position: relative;
-      margin-top: -1px;
-
-      &::after {
-        position: absolute;
-        content: "";
-        width: 20px;
-        height: 20px;
-        top: -48px;
-        left: 458px;
-        background: url("../img/icon-mail.svg") no-repeat 0 0;
-      }
-    }
-  }
-
-  .userform__contact-input {
-    width: 415px;
-    .fonts(400; 18px; 30px);
-    color: @bg-darkgrey;
-    padding: 14px 0 14px 19px;
-    margin-bottom: 10px;
-    border: 2px solid @bg-lightgrey;
-    cursor: pointer;
-    outline: none;
-    order: 1;
-
-    &:last-child {
-      margin-top: -7px;
-    }
-  }
-
-  .userform__list-radio {
-    background-color: @bg-white;
-    padding-bottom: 40px;
-    margin-top: -20px;
-    order: 2;
-  }
-
-  .userform__area-radio {
-    .inner(620px; 0);
-    border: 2px solid @bg-lightgrey;
-    padding-bottom: 60px;
-  }
-
-  .userform__title-radio {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 350px;
-  }
-
-  .userform__radio-title {
-    width: 320px;
-    padding: 0;
-  }
-
-  .userform__radio-name {
-    padding: 36px 0 0 90px;
-    margin-left: 30px;
-    margin-top: 10px;
-  }
-
-  .userform__radio {
-    &::before {
-      top: -2px;
-      left: -558px;
-    }
-
-    &:checked {
-      &::after {
-        top: 9px;
-        left: -548px;
-      }
-    }
-  }
-
-  .userform__list-textarea {
-    margin-top: 35px;
-    order: 6;
-  }
-
-  .userform__area-text {
-    .inner(620px; 0);
-    border: 2px solid @bg-lightgrey;
-    padding: 21px 0 48px;
-  }
-
-  .userform__title-textarea {
-    width: 265px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .userform__text-title {
-    padding: 18px 0 15px 0;
-  }
-
-  .userform__textarea {
-    .inner(480px; 0);
-    border: 2px solid #e5e5e5;
-    padding: 18px 0 116px 18px;
+    align-items: flex-start;
+    .inner(940px; 0);
   }
 
   .userform__submit-list {
-    .inner(620px; 0);
+    width: 940px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding-bottom: 25px;
-    order: 7;
-    margin-bottom: -58px;
+    margin-left: 45px;
+    padding: 0;
   }
 
   .userform__submit {
     width: 300px;
-    margin: 67px 0;
+    margin: 66px 0;
   }
 
   .userform__commit {
-    .fonts(400; 14px; 30px);
-    color: @bg-darkgrey;
-    text-transform: uppercase;
-    margin-top: 13px;
+    width: 320px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 328px;
+    margin-right: -15px;
+
+    &--isdesktop {
+      width: 135px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+    }
   }
 }
