--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,10 @@
 @import "blocks/contacts.less";
 @import "blocks/tariffs.less";
 @import "blocks/userform.less";
+@import "blocks/formradio.less";
+@import "blocks/formcheckbox.less";
+@import "blocks/formcontact.less";
+@import "blocks/formtextarea.less";
+@import "blocks/formusername.less";
+@import "blocks/modal-popup.less";
+@import "blocks/modal-failure.less";
