--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -132,8 +132,8 @@
   }
 
   .reviews__buttons {
-    margin-top: 13px;
-    margin-left: 298px;
+    .inner(58px; 0);
+    margin-top: 35px;
     padding-bottom: 13px;
   }
 }
