--- a/source/less/blocks/photoset.less
+++ b/source/less/blocks/photoset.less
@@ -63,7 +63,7 @@
   }
 }
 
-.photopset__list {
+.photoset__list {
   list-style: none;
   .inner(240px; 0);
   display: flex;
@@ -77,19 +77,19 @@
 }
 
 .photoset__crop-input {
-  -webkit-appearance: none;
+  appearance: none;
   width: 240px;
   cursor: pointer;
   outline: none;
 
   &::-webkit-slider-runnable-track {
     width: 100%;
-    height: 2px;
+    height: 3px;
     background-color: @col-black;
   }
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    appearance: none;
     width: 12px;
     height: 12px;
     background-color: @bg-lightgrey;
@@ -105,7 +105,7 @@
 
 .photoset__fill-input {
   display: none;
-  -webkit-appearance: none;
+  appearance: none;
   width: 240px;
   cursor: pointer;
   outline: none;
@@ -117,7 +117,7 @@
   }
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    appearance: none;
     width: 12px;
     height: 12px;
     background-color: @bg-lightgrey;
@@ -133,7 +133,7 @@
 
 .photoset__contrast-input {
   display: none;
-  -webkit-appearance: none;
+  appearance: none;
   width: 240px;
   cursor: pointer;
   outline: none;
@@ -145,7 +145,7 @@
   }
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    appearance: none;
     width: 12px;
     height: 12px;
     background-color: @bg-lightgrey;
@@ -272,7 +272,7 @@
     }
   }
 
-  .photopset__list {
+  .photoset__list {
     width: 205px;
     padding: 4px 6px 0 0;
   }
@@ -343,7 +343,7 @@
     margin-bottom: 30px;
   }
 
-  .photopset__list {
+  .photoset__list {
     width: 290px;
     padding: 20px 6px 0 0;
     margin-left: -2px;
